src/objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Price__c</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_Price</fullName>
        <active>true</active>
        <description>Price of material cannot be negative</description>
        <errorConditionFormula>Price__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price of material cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>